WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215215
REGRESSION (
r260276
): instructure.com custom PDF viewer stops scrolling / loading after switching to another tab then switching back
https://bugs.webkit.org/show_bug.cgi?id=215215
Summary
REGRESSION (r260276): instructure.com custom PDF viewer stops scrolling / loa...
Antti Koivisto
Reported
2020-08-06 07:00:29 PDT
Scrolling tree problems.
Attachments
patch
(7.46 KB, patch)
2020-08-07 05:51 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2020-08-06 07:01:03 PDT
<
rdar://problem/65743028
>
Antti Koivisto
Comment 2
2020-08-07 05:51:16 PDT
Created
attachment 406165
[details]
patch
Simon Fraser (smfr)
Comment 3
2020-08-07 08:57:30 PDT
Comment on
attachment 406165
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406165&action=review
> LayoutTests/scrollingcoordinator/overflow-proxy-reattach.html:21 > + await new Promise(requestAnimationFrame);
await UIHelper.animationFrame() ? Note that returns on the microtask checkpoint at the end of the rAF callback; it doesn't wait for the end of Page::updateRendering().
EWS
Comment 4
2020-08-07 09:49:59 PDT
Committed
r265379
: <
https://trac.webkit.org/changeset/265379
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406165
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug